fixed overflow style for code blocks

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,3 +26,7 @@ html, body {
     }
   }
 }
+
+.code {
+  overflow: auto;
+}
